--- a/faqs.html
+++ b/faqs.html
@@ -1,7 +1,9 @@
 <html lang="en">
 			<head>
 			<meta charset="UTF-8">
-			<title>FAQs | The Valley Safaris</title>
+			<title>The Valley Safari's FAQs</title>
+			<link rel="icon" type="image/png" href="android-chrome-512x512.png">
+
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <style>
@@ -114,7 +116,7 @@
 <div class="menu" id="menu">
   <a href="index.html">Home</a>
   <a href="packages.html">Packages & Bookings</a>
-  <a href="logbook.html">Hunters Logbook</a>
+  <a href="logbook.html">Hunters Logbook & Guest Reviews</a>
   <a href="team.html">Meet the Team</a>
   <a href="faqs.html">FAQs</a>
   <a href="gallery.html">Gallery</a>
@@ -226,7 +228,7 @@
   </div>
   
   <div style="text-align:center;">
-    <a href="file:///D:/Tihard%20Strydom/The%20Valley%20Safari's/The%20Valley%20Safari's%20Website.html" class="back-home">← Back to Home</a>
+    <a href="index.html" class="back-home">← Back to Home</a>
 	
   </div>
   </div>
