--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 				<head>
 						<meta charset="UTF-8">
 			<title>The Valley Safari's</title>
-			<link rel="icon" type="kudu_logo2.png"
-			href="kudu_logo2.png">
+			<link rel="icon" type="image/png" href="android-chrome-512x512.png">
+
+
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<style>
 		
@@ -170,7 +171,7 @@
 <div class="menu" id="menu">
   <a href="index.html">Home</a>
   <a href="packages.html">Packages & Bookings</a>
-  <a href="logbook.html">Hunters Logbook</a>
+  <a href="logbook.html">Hunters Logbook & Guest Reviews</a>
   <a href="team.html">Meet the Team</a>
   <a href="faqs.html">FAQs</a>
   <a href="gallery.html">Gallery</a>
@@ -239,7 +240,7 @@
 		<p style="font-size: 18px; color: #333; max-width: 700px; margin: 0 auto 40px;">
 			Ready for the safari of a lifetime? Explore our tailored hunting packages and book your adventure with The Valley Safari's today.
 		</p>
-  <a href="file:///D:/Tihard%20Strydom/The%20Valley%20Safari's/Packages_Booking.html.html" target="_blank" rel="noopener noreferrer"
+  <a href="packages.html" target="_blank" rel="noopener noreferrer"
      style="background-color: #295f2d; color: white; padding: 15px 30px; text-decoration: none; font-size: 18px; border-radius: 5px; transition: background-color 0.3s ease;">
     View Packages & Book Now
   </a>
@@ -250,7 +251,7 @@
 		<p style="font-size: 18px; color: #333; max-width: 750px; margin: 0 auto 40px;">
 			Discover unforgettable stories from our hunters and read what guests had to say about their experiences at The Valley Lodge. Every review tells a tale, and every trophy has a memory.
 		</p>
-  <a href="file:///D:/Tihard%20Strydom/The%20Valley%20Safari's/Logbook_Reviews.html.html" target="_blank" rel="noopener noreferrer"
+  <a href="logbook.html" target="_blank" rel="noopener noreferrer"
      style="background-color: #8b5d2c; color: white; padding: 15px 30px; text-decoration: none; font-size: 18px; border-radius: 5px; transition: background-color 0.3s ease;">
     Explore Stories & Testimonials
   </a>
@@ -261,7 +262,7 @@
 		<p style="font-size: 18px; color: #333; max-width: 750px; margin: 0 auto 40px;">
 			Get to know the passionate people behind The Valley Safaris. From our expert tracker to your dedicated PH, our team is here to make your hunting experience unforgettable.
 		</p>
-  <a href="file:///D:/Tihard%20Strydom/The%20Valley%20Safari's/Team.html.html" target="_blank" rel="noopener noreferrer"
+  <a href="team.html" target="_blank" rel="noopener noreferrer"
      style="background-color: #3b5323; color: white; padding: 15px 30px; text-decoration: none; font-size: 18px; border-radius: 5px; transition: background-color 0.3s ease;">
     Meet the Valley Team
   </a>
@@ -272,7 +273,7 @@
 		<p style="font-size: 18px; color: #333; max-width: 750px; margin: 0 auto 40px;">
 			Got questions about your safari, what to pack, or travel info? We’ve compiled a list of the most common queries to help you prepare for your unforgettable journey with The Valley Safaris.
 		</p>
-  <a href="file:///D:/Tihard%20Strydom/The%20Valley%20Safari's/FAQs.html.html" target="_blank" rel="noopener noreferrer"
+  <a href="faqs.html" target="_blank" rel="noopener noreferrer"
      style="background-color: #2e4e1f; color: white; padding: 15px 30px; text-decoration: none; font-size: 18px; border-radius: 5px; transition: background-color 0.3s ease;">
     View All FAQs
   </a>
@@ -283,7 +284,7 @@
 		<p style="font-size: 18px; color: #333; max-width: 750px; margin: 0 auto 40px;">
 			Explore the moments that make The Valley Safaris unforgettable — from proud hunters and majestic trophies to the natural beauty of our African landscape.
 		</p>
-  <a href="file:///D:/Tihard%20Strydom/The%20Valley%20Safari's/Gallery.html.html" target="_blank" rel="noopener noreferrer"
+  <a href="gallery.html" target="_blank" rel="noopener noreferrer"
      style="background-color: #444444; color: white; padding: 15px 30px; text-decoration: none; font-size: 18px; border-radius: 5px; transition: background-color 0.3s ease;">
     View Full Gallery
   </a>
