--- a/contact.html
+++ b/contact.html
@@ -206,7 +206,7 @@
     </div>
 
     <h2 align="center">📍 Find Us on the Map</h2>
-    <iframe src="https://www.google.com/maps?q=Farm%20Rietvallei%2C%20Rysmierbult%2C%20Ventersdorp%2C%20South%20Africa&output=embed"></iframe>
+    <iframe src="https://www.google.com/maps?q=-26.378833,27.098528&z=15&output=embed"></iframe>
   </div>
   
   <div style="text-align:center;">
